--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <!-- All HTML documents begin and end with an "html" tag -->
 <html lang="en">
-
-  <!-- The "header" is the part of your document where you provide the browser with important information like stylesheets you have used -->
-	<head>
-		<title>Typography and Color Options</title>
-		<link rel = "stlyesheet" href = "colors.css" >
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Droid+Serif|Roboto" rel="stylesheet">
-	</head>
-
-	
-  <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
+ <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
 	<body>
 		<head>
 		<link rel="stylesheet" type="text/css" href="colors.css"./>
 		<style>
 		h1 {color:teal}
 		</style>
+		<title>M.S.F</title>	
 		<center>
 		<h1>2470</h1>
 		</center>
