--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
-<!DOCTYPE html>
-<!-- All HTML documents begin and end with an "html" tag -->
-<html lang="en">
- <!-- The "body" is the part of your document where you include all content you want to show up in the browser -->
-	<body>
-		<head>
-		<link rel="stylesheet" type="text/css" href="colors.css"./>
-		<style>
-		h1 {color:teal}
-		</style>
-		<title>M.S.F</title>	
-		<center>
-		<h1>2470</h1>
-		</center>
-		<div class="box dark_blue"></div>
-		<div class="white"></div>
-		<div class="box dark_blue"></div>
-		<div class="box green"></div>
-		</head>
-	</body>
-   
-</html>
+<body data-gr-c-s-loaded="true">
+
+ 
+  <div class="oneblock">
+  <p>
+  </p><center>
+  Roberto
+  </center>
+  <p></p>
+ 
+  </div>
+  
+  <div class="twoblock">
+  <p>
+  </p><center>
+ Roberto 
+  </center>
+  <p></p>
+  </div>
+  
+   <div class="threeblock">
+   <p>
+  </p><center>
+Robert 
+  </center>
+  <p></p>
+  
+  </div>
+  
+  <div class="fourblock">
+  <p class="bottom">
+  </p><center>
+Roberto Gongora
+  </center>
+  <p></p>
+  </div>
+  
+  <div class="fiveblock">
+  <p class="bottom">
+  </p><center>
+Roberto 
+  </center>
+  <p></p>
+  </div>
+  
+
+ 
+</body>
